Add prediction API
