# api/stub/swagger_server/models/predict_moisture.py
@@ -1,0 +1,89 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.soil_moisture import SoilMoisture  # noqa: F401,E501
+from swagger_server import util
+
+
+class PredictMoisture(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, duration: str=None, predictions: List[SoilMoisture]=None):  # noqa: E501
+        """PredictMoisture - a model defined in Swagger
+
+        :param duration: The duration of this PredictMoisture.  # noqa: E501
+        :type duration: str
+        :param predictions: The predictions of this PredictMoisture.  # noqa: E501
+        :type predictions: List[SoilMoisture]
+        """
+        self.swagger_types = {
+            'duration': str,
+            'predictions': List[SoilMoisture]
+        }
+
+        self.attribute_map = {
+            'duration': 'duration',
+            'predictions': 'predictions'
+        }
+        self._duration = duration
+        self._predictions = predictions
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'PredictMoisture':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The PredictMoisture of this PredictMoisture.  # noqa: E501
+        :rtype: PredictMoisture
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def duration(self) -> str:
+        """Gets the duration of this PredictMoisture.
+
+
+        :return: The duration of this PredictMoisture.
+        :rtype: str
+        """
+        return self._duration
+
+    @duration.setter
+    def duration(self, duration: str):
+        """Sets the duration of this PredictMoisture.
+
+
+        :param duration: The duration of this PredictMoisture.
+        :type duration: str
+        """
+
+        self._duration = duration
+
+    @property
+    def predictions(self) -> List[SoilMoisture]:
+        """Gets the predictions of this PredictMoisture.
+
+
+        :return: The predictions of this PredictMoisture.
+        :rtype: List[SoilMoisture]
+        """
+        return self._predictions
+
+    @predictions.setter
+    def predictions(self, predictions: List[SoilMoisture]):
+        """Sets the predictions of this PredictMoisture.
+
+
+        :param predictions: The predictions of this PredictMoisture.
+        :type predictions: List[SoilMoisture]
+        """
+
+        self._predictions = predictions
